@@ -13,6 +13,7 @@
     * Add simple ptpdb debug script to make it easier to test the client
     * Fix a bug in sdiffstore (mt3925)
     * Fix a bug with scan_iter where duplicate keys would be returned during itteration
+    * Implement all "CLUSTER ..." commands as methods in the client class
 
 * 1.1.0
     * Refactored exception handling and exception classes.
